Use the Gradle build cache to make builds faster
This commit makes use of the Gradle build cache when executing
Gradle builds. This should reduce the execution duration of
each test, in case changes are in unrelated projects.

--- a/buildSrc/src/main/groovy/io.micronaut.internal.starter.convention.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.internal.starter.convention.gradle
@@ -17,4 +17,6 @@ tasks.withType(Test).configureEach {
     forkEvery = 100
     maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
     maxHeapSize = "2G"
+    systemProperty("ge.cache.username", System.getenv("GRADLE_ENTERPRISE_CACHE_USERNAME"))
+    systemProperty("ge.cache.password", System.getenv("GRADLE_ENTERPRISE_CACHE_PASSWORD"))
 }
